Adding price to travel , styling travel view , refactoring BingMapsService, introducing new methods , adding new script for migration, new calculation helper and fixing corner case for creating a travel.